--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,21 @@
 
-<router-outlet ></router-outlet>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">MyApp</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/posts">Posts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/posts/create">Create Post</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+<router-outlet >
+
+    
+</router-outlet>
