--- a/src/app/components/post-list/post-list.component.html
+++ b/src/app/components/post-list/post-list.component.html
@@ -1,24 +1,29 @@
-<div class="container">
-    <h1>Posts</h1>
-    
-    <div *ngIf="posts.length === 0" class="alert alert-info">
-      No posts available.
-    </div>
-    
-    <ul class="list-group">
-      <li *ngFor="let post of posts" class="list-group-item d-flex justify-content-between align-items-center">
-        <div>
-          <h5>Title : {{post.title}}</h5>
-          <p>Body : {{post.body}}</p>
-          <p>Time : {{post.time}}</p>
-          <p>likes : {{post.likes}}</p>
-          <p>Shares : {{post.share}}</p>
-        </div>
-        <div>
-          <button class="btn btn-primary btn-sm m-2" (click)="editPost(post.id)">Edit</button>
-          <button class="btn btn-danger btn-sm" (click)="deletePost(post.id)">Delete</button>
-        </div>
-      </li>
-    </ul>
+<div class="container mt-4">
+  <h1 class="mb-4">Posts</h1>
+
+  <div *ngIf="posts.length === 0" class="alert alert-info">
+    No posts available.
   </div>
-  
+
+  <div class="row">
+    <div *ngFor="let post of posts" class="col-md-6 mb-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Title: {{post.title}}</h5>
+          <p class="card-text">Body: {{post.body}}</p>
+          <p class="card-text">Time: {{post.time}}</p>
+          <p class="card-text">Likes: {{post.likes}}</p>
+          <p class="card-text">Shares: {{post.share}}</p>
+          <div class="d-flex justify-content-between">
+            <button class="btn btn-success btn-sm" >Like</button>
+            <button class="btn btn-info btn-sm">Share</button>
+          </div>
+          <div class="d-flex justify-content-between mt-3">
+            <button class="btn btn-primary btn-sm" (click)="editPost(post.id)">Edit</button>
+            <button class="btn btn-danger btn-sm" (click)="deletePost(post.id)">Delete</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
