--- a/src/app/post-create/post-create.component.html
+++ b/src/app/post-create/post-create.component.html
@@ -6,6 +6,10 @@
           <div class="form-group">
             <label for="title">Title</label>
             <input id="title" [(ngModel)]="post.title" name="title" class="form-control" required>
+
+            <div *ngIf="postForm.controls['title'].invalid && (postForm.controls['title'].dirty || postForm.controls['title'].touched)">
+              <small *ngIf="postForm.controls['title'].errors?.['required']" class="text-danger">title is required</small>
+            </div>
           </div>
           <div class="form-group" *ngIf="isEditMode">
             <label for="likes">Likes</label>
@@ -27,6 +31,10 @@
             <label for="body">Body</label>
             <textarea id="body" [(ngModel)]="post.body" name="body" class="form-control" rows="5" required></textarea>
           </div>
+          <div *ngIf="postForm.controls['body'].invalid && (postForm.controls['body'].dirty || postForm.controls['body'].touched)">
+            <small *ngIf="postForm.controls['body'].errors?.['required']" class="text-danger">body is required</small>
+          </div>
+
           <button [disabled]="postForm.invalid"  type="submit" class="btn btn-primary mt-3">{{isEditMode ? 'Update' :'Create'}}</button>
         </form>
         
